docs/html/reports/sandbox_stMDexecution.log
Traceback (most recent call last):
  File "c:\users\sllau\appdata\local\pypoetry\cache\virtualenvs\21w44-nz-covid19-vacination-analysis-north-pdjklkmj-py3.9\lib\site-packages\jupyter_cache\executors\utils.py", line 51, in single_nb_execution
    executenb(
  File "c:\users\sllau\appdata\local\pypoetry\cache\virtualenvs\21w44-nz-covid19-vacination-analysis-north-pdjklkmj-py3.9\lib\site-packages\nbclient\client.py", line 1117, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "c:\users\sllau\appdata\local\pypoetry\cache\virtualenvs\21w44-nz-covid19-vacination-analysis-north-pdjklkmj-py3.9\lib\site-packages\nbclient\util.py", line 78, in wrapped
    return just_run(coro(*args, **kwargs))
  File "c:\users\sllau\appdata\local\pypoetry\cache\virtualenvs\21w44-nz-covid19-vacination-analysis-north-pdjklkmj-py3.9\lib\site-packages\nbclient\util.py", line 57, in just_run
    return loop.run_until_complete(coro)
  File "c:\Users\SLLau\.pyenv\pyenv-win\versions\3.9.7\lib\asyncio\base_events.py", line 642, in run_until_complete
    return future.result()
  File "c:\users\sllau\appdata\local\pypoetry\cache\virtualenvs\21w44-nz-covid19-vacination-analysis-north-pdjklkmj-py3.9\lib\site-packages\nbclient\client.py", line 558, in async_execute
    await self.async_execute_cell(
  File "c:\users\sllau\appdata\local\pypoetry\cache\virtualenvs\21w44-nz-covid19-vacination-analysis-north-pdjklkmj-py3.9\lib\site-packages\nbclient\client.py", line 862, in async_execute_cell
    self._check_raise_for_error(cell, exec_reply)
  File "c:\users\sllau\appdata\local\pypoetry\cache\virtualenvs\21w44-nz-covid19-vacination-analysis-north-pdjklkmj-py3.9\lib\site-packages\nbclient\client.py", line 765, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
from IPython.core.display import display, HTML
from plotly.offline import init_notebook_mode, plot
init_notebook_mode(connected=True)

import plotly.io as pio
import plotly.express as px
import plotly.offline as py

print("Plotly loaded")
df = px.data.iris()
fig = px.scatter(df, x="sepal_width", y="sepal_length", color="species", size="sepal_length")
fig

plot(fig, filename = 'figure.html')
display(HTML('figure.html')
------------------

[1;36m  File [1;32m"C:\Users\SLLau\AppData\Local\Temp/ipykernel_59496/388763711.py"[1;36m, line [1;32m15[0m
[1;33m    display(HTML('figure.html')[0m
[1;37m                               ^[0m
[1;31mSyntaxError[0m[1;31m:[0m unexpected EOF while parsing

SyntaxError: unexpected EOF while parsing (Temp/ipykernel_59496/388763711.py, line 15)

